# reactor-poison-simulation

./: Cargo.toml
src/: main.rs  simulation.rs
static/css/: style.css
static/js/: handler.js
templates/: index.html
