[package]
name = "nuclear_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = "0.7.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
